--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # dependencies
 /node_modules
 /.pnp
@@ -13,6 +15,10 @@
 # production
 /build
 
+# Electron
+/dist
+/electron/dist
+
 # misc
 .DS_Store
 *.pem
@@ -24,7 +30,6 @@ yarn-error.log*
 
 # local env files
 .env*.local
-.env
 
 # vercel
 .vercel
@@ -33,7 +38,6 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# database
-prisma/*.db
-prisma/*.db-journal
-
+# prisma
+/prisma/dev.db
+/prisma/dev.db-journal
