--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express": "^4.18.2",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
-    "jspdf": "^2.5.1",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "next": "^13.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
