--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "next": "^13.5.6",
+    "node-cron": "^4.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
