--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "electron": "electron .",
     "prepare:build": "node scripts/prepare-build-db.js",
     "rebuild:mac": "rm -rf dist && yarn install && yarn prisma generate && yarn electron:build:mac",
+    "rebuild:win": "rm -rf dist && yarn install && yarn prisma generate && yarn electron:build:win",
     "electron:build": "npm run prepare:build && next build && npx prisma generate && electron-builder",
     "electron:build:win": "npm run prepare:build && next build && npx prisma generate && electron-builder --win",
     "electron:build:mac": "npm run prepare:build && next build && npx prisma generate && electron-builder --mac",
