--- a/package.json
+++ b/package.json
@@ -107,6 +107,16 @@
       ],
       "icon": "electron/icon.png"
     },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "allowElevation": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "shortcutName": "Punsook Innotech",
+      "runAfterFinish": false,
+      "include": "build/installer.nsh"
+    },
     "mac": {
       "target": [
         "dmg",
