--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dev": "concurrently \"cross-env SKIP_ENV_VALIDATION=true next dev\" \"wait-on http://localhost:3000 && electron .\"",
     "build": "next build",
     "start": "next start",
-    "web:dev": "cross-env SKIP_ENV_VALIDATION=true next dev",
+    "web:dev": "cross-env SKIP_ENV_VALIDATION=true next dev -H 0.0.0.0",
     "web:build": "next build",
-    "web:start": "next start -p 3000",
+    "web:start": "next start -H 0.0.0.0 -p 3000",
     "electron": "electron .",
     "prepare:build": "node scripts/prepare-build-db.js",
     "rebuild:mac": "rm -rf dist && yarn install && yarn prisma generate && yarn electron:build:mac",
