--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "lint": "next lint",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "db:seed": "tsx prisma/seed.ts"
+    "db:seed": "tsx prisma/seed.ts",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "postinstall": "prisma generate",
   "dependencies": {
@@ -47,6 +51,10 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -54,6 +62,9 @@
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@vitejs/plugin-react": "^5.1.1",
+    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/ui": "^4.0.13",
     "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
@@ -61,11 +72,14 @@
     "electron-builder": "^24.6.4",
     "eslint": "^8.53.0",
     "eslint-config-next": "^14.0.0",
+    "jsdom": "^23.0.0",
     "postcss": "^8.4.31",
     "prisma": "^5.6.0",
     "tailwindcss": "^3.3.5",
     "tsx": "^4.6.2",
     "typescript": "^5.2.2",
+    "vite": "^5.4.0",
+    "vitest": "^1.0.0",
     "wait-on": "^7.2.0"
   },
   "build": {
