--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# Database
+# Database - Path relative to prisma/schema.prisma location
 DATABASE_URL="file:./dev.db"
 
 # JWT Secret
@@ -7,4 +7,3 @@ JWT_SECRET="your-secret-key-change-this-in-production"
 # App
 NEXT_PUBLIC_APP_NAME="BigLatex-Pro"
 NEXT_PUBLIC_APP_VERSION="1.0.0"
-
