deploy on vercel

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Database - Path relative to prisma/schema.prisma location
-DATABASE_URL="file:./dev.db"
+DATABASE_URL='postgresql://neondb_owner:npg_mz5dI9aqiPTg@ep-patient-dawn-a1bhnxtm-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
 
 # JWT Secret
 JWT_SECRET="your-secret-key-change-this-in-production"
