--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "ระบบบริหารจัดการรับซื้อยาง (Rubber Purchasing Management System)",
   "main": "electron/main.js",
   "scripts": {
-    "dev": "concurrently \"cross-env SKIP_ENV_VALIDATION=true next dev\" \"wait-on http://localhost:3000 && electron .\"",
-    "build": "next build",
+    "dev": "prisma generate && next dev",
+    "build": "prisma generate && prisma db push && prisma db seed && next build",
     "start": "next start",
+    "vercel-build": "prisma generate && prisma db push && prisma db seed && next build",
+    "electron:dev": "concurrently \"cross-env SKIP_ENV_VALIDATION=true next dev\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron:build": "npm run prepare:build && next build && npx prisma generate && electron-builder",
     "web:dev": "cross-env SKIP_ENV_VALIDATION=true next dev -H 0.0.0.0",
     "web:build": "next build",
     "web:start": "next start -H 0.0.0.0 -p 3000",
@@ -14,14 +17,16 @@
     "prepare:build": "node scripts/prepare-build-db.js",
     "rebuild:mac": "rm -rf dist && yarn install && yarn prisma generate && yarn electron:build:mac",
     "rebuild:win": "rm -rf dist && yarn install && yarn prisma generate && yarn electron:build:win",
-    "electron:build": "npm run prepare:build && next build && npx prisma generate && electron-builder",
     "electron:build:win": "npm run prepare:build && next build && npx prisma generate && electron-builder --win",
     "electron:build:mac": "npm run prepare:build && next build && npx prisma generate && electron-builder --mac",
     "electron:build:all": "npm run prepare:build && next build && npx prisma generate && electron-builder --win --mac",
+    "setup:local": "bash scripts/setup-local-db.sh",
+    "setup:postgres": "bash scripts/setup-postgres-db.sh",
     "lint": "next lint",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "db:seed": "cross-env DATABASE_URL=\"file:./dev.db\" tsx prisma/seed.ts",
+    "db:seed": "tsx prisma/seed.ts",
+    "db:seed:local": "cross-env DATABASE_URL=\"file:./dev.db\" tsx prisma/seed.ts",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
