--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "electron:build:all": "npm run prepare:build && next build && npx prisma generate && electron-builder --win --mac",
     "setup:local": "bash scripts/setup-local-db.sh",
     "setup:postgres": "bash scripts/setup-postgres-db.sh",
+    "push:github": "bash scripts/push-to-github.sh",
     "lint": "next lint --quiet",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
