update: create sqllite

--- a/.env.backup
+++ b/.env.backup
@@ -1,5 +1,5 @@
-# Neon Development with PostgreSQL
-DATABASE_URL="postgresql://user:password@ep-xxx.region.aws.neon.tech/neondb?sslmode=require"
+# Local Development with SQLite
+DATABASE_URL="file:./prisma/dev.db"
 
 # JWT Secret
 JWT_SECRET="your-secret-key-change-this-in-production"
