--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "punsook-innotech",
-  "version": "1.0.0",
+  "version": "1.1.1",
   "description": "ระบบบริหารจัดการรับซื้อยาง (Rubber Purchasing Management System)",
   "main": "electron/main.js",
   "scripts": {
@@ -9,25 +9,23 @@
     "start": "next start",
     "vercel-build": "bash scripts/vercel-build.sh",
     "electron:dev": "concurrently \"cross-env SKIP_ENV_VALIDATION=true next dev\" \"wait-on http://localhost:3000 && electron .\"",
-    "electron:build": "npm run prepare:build && next build && npx prisma generate && electron-builder",
+    "electron:build": "npm run setup:postgres:local && next build && npx prisma generate && electron-builder",
     "web:dev": "cross-env SKIP_ENV_VALIDATION=true next dev -H 0.0.0.0",
     "web:build": "next build",
     "web:start": "next start -H 0.0.0.0 -p 3000",
     "electron": "electron .",
-    "prepare:build": "node scripts/prepare-build-db.js",
-    "rebuild:mac": "rm -rf dist && yarn install && yarn prisma generate && yarn electron:build:mac",
-    "rebuild:win": "rm -rf dist && yarn install && yarn prisma generate && yarn electron:build:win",
-    "electron:build:win": "npm run prepare:build && next build && npx prisma generate && electron-builder --win",
-    "electron:build:mac": "npm run prepare:build && next build && npx prisma generate && electron-builder --mac",
-    "electron:build:all": "npm run prepare:build && next build && npx prisma generate && electron-builder --win --mac",
-    "setup:local": "bash scripts/setup-local-db.sh",
+    "electron:build:win": "rm -rf dist && npm run setup:postgres:local && next build && npx prisma generate && npx prisma db push && npm run db:seed && electron-builder --win",
+    "electron:build:mac": "rm -rf dist && npm run setup:postgres:local && next build && npx prisma generate && npx prisma db push && npm run db:seed && electron-builder --mac",
     "setup:postgres": "bash scripts/setup-postgres-db.sh",
+    "setup:postgres:local": "node scripts/setup-postgres-local.js",
+    "setup:sqlite": "node scripts/setup-sqlite-local.js",
+    "install:postgres:windows": "powershell -ExecutionPolicy Bypass -File scripts/install-postgres-windows.ps1",
+    "setup:postgres:windows": "powershell -ExecutionPolicy Bypass -File scripts/setup-postgres-windows-complete.ps1",
     "push:github": "bash scripts/push-to-github.sh",
     "lint": "next lint --quiet",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "db:seed": "tsx prisma/seed.ts",
-    "db:seed:local": "cross-env DATABASE_URL=\"file:./dev.db\" tsx prisma/seed.ts",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
@@ -72,7 +70,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^5.1.1",
-    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/coverage-v8": "^4.0.13",
     "@vitest/ui": "^4.0.13",
     "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.2",
@@ -88,7 +86,7 @@
     "tsx": "^4.6.2",
     "typescript": "^5.2.2",
     "vite": "^5.4.0",
-    "vitest": "^1.0.0",
+    "vitest": "^4.0.13",
     "wait-on": "^7.2.0"
   },
   "build": {
