--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
     "web:build": "next build",
     "web:start": "next start -H 0.0.0.0 -p 3000",
     "electron": "electron .",
-    "electron:build:win": "rm -rf dist && npm run setup:postgres:local && next build && npx prisma generate && npx prisma db push && npm run db:seed && electron-builder --win",
-    "electron:build:mac": "rm -rf dist && npm run setup:postgres:local && next build && npx prisma generate && npx prisma db push && npm run db:seed && electron-builder --mac",
+    "electron:build:win": "rm -rf dist && npm run setup:sqlite && next build && electron-builder --win",
+    "electron:build:mac": "rm -rf dist && npm run setup:sqlite && next build && electron-builder --mac",
     "setup:postgres": "bash scripts/setup-postgres-db.sh",
     "setup:postgres:local": "node scripts/setup-postgres-local.js",
     "setup:sqlite": "node scripts/setup-sqlite-local.js",
-    "install:postgres:windows": "powershell -ExecutionPolicy Bypass -File scripts/install-postgres-windows.ps1",
-    "setup:postgres:windows": "powershell -ExecutionPolicy Bypass -File scripts/setup-postgres-windows-complete.ps1",
     "push:github": "bash scripts/push-to-github.sh",
     "lint": "next lint --quiet",
     "db:push": "prisma db push",
