update backup page

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "punsook-innotech",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "ระบบบริหารจัดการรับซื้อยาง (Rubber Purchasing Management System)",
   "main": "electron/main.js",
   "scripts": {
@@ -11,11 +11,11 @@
     "electron:dev": "concurrently \"cross-env SKIP_ENV_VALIDATION=true next dev\" \"wait-on http://localhost:3000 && electron .\"",
     "electron:build": "npm run setup:postgres:local && next build && npx prisma generate && electron-builder",
     "web:dev": "cross-env SKIP_ENV_VALIDATION=true next dev -H 0.0.0.0",
-    "web:build": "next build",
+    "web:build": "cross-env NEXT_PRIVATE_SKIP_SWC_NATIVE_DOWNLOAD=1 next build",
     "web:start": "next start -H 0.0.0.0 -p 3000",
     "electron": "electron .",
-    "electron:build:win": "rm -rf dist && npm run setup:sqlite && next build && electron-builder --win",
-    "electron:build:mac": "rm -rf dist && npm run setup:sqlite && next build && electron-builder --mac",
+    "electron:build:win": "rm -rf dist && npm run setup:sqlite && cross-env NEXT_PRIVATE_SKIP_SWC_NATIVE_DOWNLOAD=1 next build && electron-builder --win",
+    "electron:build:mac": "rm -rf dist && npm run setup:sqlite && cross-env NEXT_PRIVATE_SKIP_SWC_NATIVE_DOWNLOAD=1 next build && electron-builder --mac",
     "setup:postgres": "bash scripts/setup-postgres-db.sh",
     "setup:postgres:local": "node scripts/setup-postgres-local.js",
     "setup:sqlite": "node scripts/setup-sqlite-local.js",
@@ -60,6 +60,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@next/swc-wasm-nodejs": "13.5.11",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
