--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.2",
   "description": "ระบบบริหารจัดการรับซื้อยาง (Rubber Purchasing Management System)",
   "main": "electron/main.js",
+  "author": "Punsook Innotech",
   "scripts": {
     "dev": "prisma generate && next dev",
     "build": "bash scripts/vercel-build.sh",
