--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# Local Development with SQLite
-DATABASE_URL="file:./prisma/dev.db"
+# Neon Development with PostgreSQL
+DATABASE_URL="postgresql://neondb_owner:npg_mz5dI9aqiPTg@ep-patient-dawn-a1bhnxtm-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 
 # JWT Secret
 JWT_SECRET="your-secret-key-change-this-in-production"
