--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "recharts": "^2.10.3",
+    "swiper": "^11.0.5",
     "tailwind-merge": "^2.1.0",
     "zod": "^3.22.4"
   },
